--- a/src/Style/app.scss
+++ b/src/Style/app.scss
@@ -1,14 +1,5 @@
-.flex-container {
-  margin: 0 0.30rem;
-  background-color: rebeccapurple;
-}
-.flex-container .inline {
-  width: 1.6rem!important;
-  margin: 0.18rem 0.18rem 0.18rem 0;
-}
-.flex-container .small {
-  height: 0.4rem!important;
-  line-height: 0.4rem!important;
+.am-grid {
+  border: 1px solid #ddd;
 }
 .sub-title {
   color: #888;
