--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -24,6 +24,9 @@
   .cd-day-box-active{
     background-color: $lightBlue;
   }
+  .cd-day-box-click-active{
+    margin-bottom: -1px;
+  }
   .cd-sch-detail{
     border-bottom: 1px solid $grey;
     background-color: $lightBlue;
