calendar rows self-adaption

--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -8,7 +8,7 @@
     border-bottom: 1px solid $grey;
   }
   .cd-content{
-    height: 2.6rem;
+    //height: 2.6rem;
     border-bottom: 1px solid $grey;
   }
   .cd-head, .cd-content{
