modify calendar logic (50%)

--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -26,6 +26,7 @@
   }
   .cd-day-box-click-active{
     margin-bottom: -1px;
+    background-color: $lightBlue;
   }
   .cd-sch-detail{
     border-bottom: 1px solid $grey;
