--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -26,10 +26,10 @@
   }
   .cd-day-box-click-active{
     margin-bottom: -1px;
-    background-color: $lightBlue;
+    background-color: $lightGrey;
   }
   .cd-sch-detail{
     border-bottom: 1px solid $grey;
-    background-color: $lightBlue;
+    background-color: $lightGrey;
   }
 }
