--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -40,9 +40,11 @@
       bottom: 0;
       left: 0;
       right: 0;
-      margin: 0 auto;
+      margin: auto;
       text-align: center;
-      height: 20%;
+      height: 16px;
+      font-size: 16px;
+      line-height: 100%;
     }
   }
 }
