complete buttom menu style

--- a/src/Component/bottomMenu/bottomMenu.scss
+++ b/src/Component/bottomMenu/bottomMenu.scss
@@ -16,17 +16,17 @@
       background-repeat: no-repeat;
     }
     .bottom-menu-sch{
-      background-image: url("@/img/schedule.png");
+      background-image: url("@/Img/schedule.png");
     }
     .bottom-menu-info{
-      background-image: url("@/img/info.png");
+      background-image: url("@/Img/info.png");
     }
   }
   .bottom-menu-add{
     margin: 0 auto;
     width: 1rem;
     height: 100%;
-    background: url("@/img/add.png") no-repeat;
+    background: url("@/Img/add.png") no-repeat;
     background-size: 100% 100%;
   }
 }
