--- a/src/Component/calendar/calendar.scss
+++ b/src/Component/calendar/calendar.scss
@@ -8,6 +8,7 @@
     text-align: center;
     font-size: 14px;
     border-bottom: 1px solid $grey;
+    border-top: 1px solid $grey;
   }
   .cd-content{
     //height: 2.6rem;
