complete top menu style  80%

--- a/src/Component/bottomMenu/bottomMenu.scss
+++ b/src/Component/bottomMenu/bottomMenu.scss
@@ -10,7 +10,7 @@
   .bottom-menu-icon{
     div{
       margin: 0 auto 0.1rem;
-      width: 0.6rem;
+      width: .6rem;
       height: 53%;
       background-size: 100% 100%;
       background-repeat: no-repeat;
