vertify shedule time text

--- a/src/Style/newSchedule.scss
+++ b/src/Style/newSchedule.scss
@@ -50,6 +50,7 @@
   .new-sch-time{
     width: 1.88rem;
     height: .9rem;
+    line-height: .9rem;
     border: 1px solid #D9E4E8;
     border-radius: 3px;
     background-color: #fff;
