add time select logic

--- a/src/Style/newSchedule.scss
+++ b/src/Style/newSchedule.scss
@@ -54,6 +54,7 @@
     border: 1px solid #D9E4E8;
     border-radius: 3px;
     background-color: #fff;
+    text-align: center;
   }
   .new-sch-start{
     float: left;
