change theme input color

--- a/src/Style/newSchedule.scss
+++ b/src/Style/newSchedule.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     background-color: #2088FB;
     font-size: .47rem;
-    color: #71D7FF;
+    color: #fff;
     &::-webkit-input-placeholder { /* WebKit browsers */
       color: #71D7FF;
     }
